# fastapi-python

./: README.md  app.yaml  conftest.py  main.py  pyproject.toml  requirements.txt  test_main.http
bookstore/: main.py
bookstore/api/: routes.py
fastapi/: main.py
gcp/: GCP_Readme.md  compute_engine_startup_script.sh  startup_script.sh
tests/: test_bookstore.py
